tests/ui/traits/project-modulo-regions.with_clause.stderr
error: evaluate(Binder { value: (Helper: HelperTrait), bound_vars: [] }) = Ok(EvaluatedToOkModuloRegions)
  --> $DIR/project-modulo-regions.rs:56:5
   |
LL |     Helper: HelperTrait,
   |             ----------- predicate
...
LL |     test(val);
   |     ^^^^

error: aborting due to 1 previous error

